# gamma

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
Gamma.egg-info/: PKG-INFO  SOURCES.txt
examples/: 0.example_renderable.py  1.example_entities_images_animations.py  10.example_particle_system.py  11.example_trauma_system.py  11.example_triggers.py  12.example_cutscene.py  12.example_triggers.py  13.example_cutscene.py  13.example_inventory.py  14.example_inventory.py  14.example_scene_images.py  15.example_crafting.py  15.example_scene_images.py  15.example_world_images.py  16.example_crafting.py  17.example_lighting.py  2.example_cameras.py  3.example_map.py  4.example_menu.py  4.example_menu_button.py  5.example_scenes_transitions.py  6.example_button.py  6.example_movement.py  7.example_input_movement.py  8.example_text_system.py  9.example_emote_system.py
gamma/: __init__.py  circle.py  colours.py  component.py  component_battle.py  component_camera.py  component_collider.py  component_crafting.py  component_emote.py  component_image.py  component_imagegroups.py  component_input.py  component_inventory.py  component_particle_emitter.py  component_position.py  component_tags.py  component_text.py  component_transform.py  component_trauma.py  component_triggers.py  crafting_recipe.py  cutscene.py  engine.py  entity.py  entitymanager.py  gamma.py  hitbox.py  hurtbox.py  image.py  imagegroup.py  inputmanager.py  keyboard.py  keyboard_layouts.py  manager_input.py  manager_resource.py  manager_scene.py  manager_sound.py  manager_system.py  (+52 more)
(+111 files in other folders)
